fixed collapse buttons and mobile widths

--- a/src/AppBundle/Resources/public/sass/_variables.scss
+++ b/src/AppBundle/Resources/public/sass/_variables.scss
@@ -154,3 +154,7 @@ $color_table_background_hover_even: $color_table_background_even;
 $heading_font: $cormorant_garamond;
 $body_font: $lato;
 $body_font_bold: $lato_black;
+
+
+
+$desktop-width: 970px;
