--- a/src/AppBundle/Resources/public/sass/base.scss
+++ b/src/AppBundle/Resources/public/sass/base.scss
@@ -509,9 +509,11 @@ a.btn-primary {
 // }
 
 #navbar {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include desktop {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .navbar-default {
@@ -541,16 +543,19 @@ a.btn-primary {
 }
 
 .navbar-nav > li {
-  display: flex;
-  flex-grow: 1;
-  align-items: center;
-  justify-content: center;
-  > a {
+  @include desktop {
+    display: flex;
     flex-grow: 1;
     align-items: center;
     justify-content: center;
-    display: flex;
-    padding: 20px 10px 20px 10px;
+
+    > a {
+      flex-grow: 1;
+      align-items: center;
+      justify-content: center;
+      display: flex;
+      padding: 20px 10px 20px 10px;
+    }
   }
 }
 .navbar-default .navbar-nav > li > a {
@@ -617,7 +622,18 @@ a.btn-primary {
   font-family: $lato;
 
   > li {
-    @include link($color_dropdown_link, $color_dropdown_link_hover);
+    // @include link($color_dropdown_link, $color_dropdown_link_hover);
+    a,
+    a:link,
+    a:visited {
+      color: $color_dropdown_link !important;
+    }
+
+    a:active,
+    a:focus,
+    a:hover {
+      color: $color_dropdown_link !important;
+    }
 
     &.divider {
       // height: 1px;
